@@ -3,6 +3,7 @@
                               Kiji Schema Shell Release Notes
 
 Version 1.1.0
+  * DDLSHELL-20. Add CREATE INSTANCE <instance> and DROP INSTANCE <instance> commands.
   * DDLSHELL-19. Prevent program crash when you operate on a Kiji instance
       that doesn't exist.
   * DDLSHELL-24. Add support for NUMREGIONS table property, specifying
